# slam_stack

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists_test.txt  ISSUES.md  test_standalone.cpp
.claude/: settings.json
cmake/: slam_stackConfig.cmake.in
common/include/slam/: localization_recording.hpp  ply_export.hpp  ply_reader.hpp  types.hpp
config/: mid360.yaml
docs/: livox_mid360_integration.md
examples/: benchmark_global_localization.cpp  calibration_run.cpp  live_slam.cpp  manual_drive.cpp  record_fusion_data.cpp  replay_fusion_data.cpp  replay_localization.cpp  replay_slam.cpp  slam_main.cpp  test_gamepad.cpp  test_global_localization.cpp  test_global_relocalization.cpp  test_gravity_alignment.cpp  test_icp_suite.cpp  test_livox_connection.cpp  test_localization.cpp  test_localization_mode.cpp  test_motion_sequence.cpp  test_odom_vs_slam.cpp  test_ply_export.cpp  test_preprocessor.cpp  test_progressive_localization.cpp  test_real_icp.cpp  test_relocalization.cpp  test_sensor_fusion.cpp  test_slam_viewer.cpp
gui/: command_queue.hpp  diagnostic_logger.hpp  probe_coverage.hpp  shared_state.hpp  slam_control_gui.cpp  slam_gui.cpp  state.hpp
ralph/: CLAUDE.md  PROGRESS.md  PROMPT.md  run_ralph.sh  test_localization.sh
slam_engine/include/slam/: gamepad.hpp  global_localization.hpp  icp.hpp  icp_accelerated.hpp  imu_processing.hpp  livox_mid360.hpp  motion_controller.hpp  preprocess.hpp  progressive_localizer.hpp  sensor_fusion.hpp  slam_engine.hpp  slam_with_global_localization.hpp  so3_math.hpp  use_ikfom.hpp  vesc_can_interface.hpp  vesc_driver.hpp  visualization.hpp  visualization_interface.hpp
slam_engine/include/slam/ikd-Tree/: ikd_Tree.h
slam_engine/src/: gamepad.cpp  motion_controller.cpp  sensor_fusion.cpp  vesc_can_interface.cpp  vesc_driver.cpp  visualization.cpp
tools/: analyze_ply.py  analyze_recording.cpp  analyze_slog.py  configure_livox_network.bat  rosbag_to_ply.py
visualization/: slam_viewer.cpp  slam_viewer.hpp  slam_viewer_impl.hpp
